@@ -7,6 +7,12 @@ Changes in Bitbake 1.8.x:
 	- Sync fetcher code with that in trunk, adding SRCREV support for svn
 	- Add ConfigParsed Event after configuration parsing is complete
 	- data.emit_var() - only call getVar if we need the variable
+	- Stop generating the A variable (seems to be legacy code)
+	- Make sure intertask depends get processed correcting in recursive depends
+	- Add pn-PN to overrides when evaluating PREFERRED_VERSION
+	- Improve the progress indicator by skipping tasks that have 
+	  already run before starting the build rather than during it
+	- Add profiling option (-P)		
 
 Changes in Bitbake 1.8.6:
 	- Correctly redirect stdin when forking
